Fix tabs in FF again.  overflow breaks FF layout.  Also, don't use overflow scroll for FF in contacts app to avoid ugly scrollbars

--- a/sample-apps/contacts/app/list/structure.css
+++ b/sample-apps/contacts/app/list/structure.css
@@ -12,7 +12,7 @@
 }
 
 .contact-list-view {
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .contact-list-view .remove {
